# Stable-Diffusion-Android

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  DOCUMENTATION.md  GIT_WORKFLOW.md  NIGHTLY_BUILDS.md  README.md  SCREENSHOT_GENERATION.md  adb_remove.sh  build.gradle  build.gradle.kts  dependencies.gradle  gradle.properties  settings.gradle  settings.gradle.kts
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: android_test.yml  build_release.yml  build_test.yml  nightly_android.yml  unit_tests_android.yml
: .github/workflows/: android.yml
app/: .gitignore  app.gradle  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
app/android/: build.gradle.kts
app/android/src/main/: AndroidManifest.xml
app/ios/iosApp/: AIStableDiffusionIOSApp.swift  ComposeView.swift  Info.plist  OptionalNonFreeBridge.swift  SDAIOptionalNonFree.xcconfig  SyncedIapProducts.storekit
app/ios/iosApp.xcodeproj/: project.pbxproj
app/src/dev/: AndroidManifest.xml
app/src/foss/: AndroidManifest.xml
app/src/full/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml  AndroidManifestFoss.xml
app/src/playstore/: AndroidManifest.xml
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
core/common/: build.gradle  build.gradle.kts
core/imageprocessing/: build.gradle  build.gradle.kts
core/localization/: build.gradle  build.gradle.kts
core/notification/: build.gradle  build.gradle.kts
core/ui/: build.gradle  build.gradle.kts
core/validation/: build.gradle  build.gradle.kts
data/: build.gradle  build.gradle.kts  data.gradle  proguard-rules.pro
demo/: build.gradle  build.gradle.kts  proguard-rules.pro
demo/src/main/assets/: demo.json
docs/: CNAME  app-ads.txt  app-store-core-ml-compliance.md  bonsai.json  coins.json  compose-multiplatform-ios-refactor-plan.md  coreml.json  donate.html  faq.html  faq.json  feature-flags.json  hf-models.json  index.html  index_backup.html  mediapipe.json  models.json  motd.json  nightly.html  policy.html  pr-614-backport.md  privacy.html  robots.txt  sdai-cloud-terms.html  sdxl.json  site.webmanifest  sitemap.xml  supporters.json  testflight.html  version.json
docs/css/: site.css
docs/docs/: index.html  navigation.html  package-list
docs/docs/app/: index.html
docs/docs/app/com.shifthackz.aisdv1.app/: index.html
docs/docs/app/com.shifthackz.aisdv1.app.di/: feature-module.html  index.html  preference-module.html  providers-module.html
docs/docs/core/common/: index.html
docs/docs/core/imageprocessing/: index.html
docs/docs/core/localization/: index.html
docs/docs/core/notification/: index.html  navigation.html
docs/docs/data/: index.html
docs/docs/demo/: index.html  navigation.html
docs/docs/domain/: index.html
docs/docs/network/: index.html
docs/docs/presentation/: index.html
docs/docs/scripts/: pages.json  sourceset_dependencies.js
docs/docs/storage/: index.html
docs/js/: site.js
docs/screenshots/: deck.json
docs/sdapi/v1/: options  samplers  sd-models
domain/: build.gradle  build.gradle.kts  domain.gradle  proguard-rules.pro
feature/ads/: build.gradle
feature/analytics/: build.gradle
feature/auth/: build.gradle  build.gradle.kts
feature/benchmark/: build.gradle.kts
feature/benchmark/src/androidMain/cpp/: CMakeLists.txt  benchmark_vulkan_probe.cpp  benchmark_vulkan_smoke.comp  benchmark_vulkan_smoke_spv.h
feature/billing/: build.gradle
feature/bonsai/: Package.swift  build.gradle.kts
feature/bonsai/src/androidMain/cpp/: CMakeLists.txt  bonsai_activation.cpp  bonsai_activation.h  bonsai_attention.cpp  bonsai_attention.h  bonsai_dequant.cpp  bonsai_dequant.h  bonsai_embedding.cpp  bonsai_embedding.h  bonsai_flux_attention_layout.cpp  bonsai_flux_attention_layout.h  bonsai_flux_double_block.cpp  bonsai_flux_double_block.h  bonsai_flux_modulation.cpp  bonsai_flux_modulation.h  bonsai_flux_output.cpp  bonsai_flux_output.h  bonsai_flux_pos_embed.cpp  bonsai_flux_pos_embed.h  bonsai_flux_rope.cpp  bonsai_flux_rope.h  bonsai_flux_single_block.cpp  bonsai_flux_single_block.h  bonsai_flux_time_embedding.cpp  bonsai_flux_time_embedding.h  bonsai_flux_transformer.cpp  bonsai_flux_transformer.h  bonsai_flux_vae.cpp  bonsai_flux_vae.h  bonsai_image_encoder.cpp  bonsai_image_encoder.h  bonsai_jni.cpp  bonsai_latents.cpp  bonsai_latents.h  bonsai_layer_norm.cpp  bonsai_layer_norm.h  bonsai_linear.cpp  bonsai_linear.h  bonsai_matmul.cpp  bonsai_matmul.h  (+38 more)
feature/bonsai/swift/: Package.resolved  Package.swift
feature/coreml/: build.gradle.kts
feature/coreml/swift/: Package.swift
feature/dev/: build.gradle
feature/diffusion/: build.gradle  build.gradle.kts
feature/mediapipe/: build.gradle.kts
feature/onnx/: build.gradle.kts
feature/sdxl/: build.gradle  build.gradle.kts
feature/sdxl/src/androidMain/cpp/: CMakeLists.txt  stable_diffusion_jni.cpp
feature/work/: build.gradle  build.gradle.kts
gradle/: ci.gradle  common.gradle  dependencies.gradle  libs.versions.toml  plugins.gradle  profm.gradle
gradle/wrapper/: gradle-wrapper.properties
network/: build.gradle  build.gradle.kts  network.gradle  proguard-rules.pro
presentation/: build.gradle  build.gradle.kts  presentation.gradle  proguard-rules.pro
qa/mobile/: .env.example  README.md
qa/mobile/maestro/: automatic1111_img2img.yaml  automatic1111_inpaint.yaml  automatic1111_txt2img.yaml  swarmui_txt2img.yaml
scripts/: build_android.sh  build_ios.sh  generate_store_screenshots.mjs  uninstall_android.sh
scripts/docker/android/: Dockerfile
storage/: build.gradle  build.gradle.kts  proguard-rules.pro
storage/schemas/com.shifthackz.aisdv1.storage.db.cache.CacheDatabase/: 1.json
storage/schemas/com.shifthackz.aisdv1.storage.db.coins.CoinDatabase/: 1.json  2.json
storage/schemas/com.shifthackz.aisdv1.storage.db.persistent.PersistentDatabase/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
storage/schemas/com.shifthackz.scaffold.storage.database.AppDatabase/: 1.json
(+12879 files in other folders)
